--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
 </div>
 
-<div class="estrella-marina">
+<div class="estrella-marina no-se-ve">
     <img src="./img/estrella.png" alt="dibujo de una estrella marina">
 </div>
 
@@ -277,7 +277,7 @@
 
 <!-- Ubicacion -->
 
-<div class="dibujo-concha">
+<div class="dibujo-concha no-se-ve">
     <img src="./img/dibujo-concha.png" alt="Concha dibujo">
 </div>
 
@@ -304,7 +304,7 @@
             <li>Turismo cultural en San Antonio Oeste</li>
         </ul>
         
-        <a href="./pages/prueba.html" class="boton-ver-mas">Ver más</a>
+        <a href="./pages/guia-turistica.html" class="boton-ver-mas">Ver más</a>
 
     </div>
 
