mejoras para el view 1025

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="col-md-6 d-flex flex-column justify-content-start">
         <h3 class="otro-margin">Nuestros servicios</h3>
         <h4 class="mb-3 otro-margin">Contamos con</h4>
-        <ul class="list-unstyled ">
+        <ul class="list-unstyled otro-list-medidas">
           <li>Desayuno</li>
           <li>Amplio lobby con WiFi para desayunar, trabajar y disfrutar del momento.</li>
           <li>Terraza</li>
